# Quant

./: README.md  lean.json  pyproject.toml  quant_setup.sh
MyFirstStrategy/: config.json  main.py
