[project]
name = "quant"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.3.0",
    "scipy==1.15.3",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "plotly==6.1.2",
    "scikit-learn==1.7.0",
    "xgboost==3.0.2",
    "lightgbm==4.6.0",
    "torch==2.7.1",
    "requests==2.32.3",
    "beautifulsoup4==4.13.4",
    "lxml==5.4.0",
    "sqlalchemy==2.0.41",
    "pymongo==4.13.0",
    "openpyxl==3.1.5",
    "ib-insync==0.9.86",
    "alpaca-trade-api==3.2.0",
    "ccxt==4.4.88",
    "openai (>=1.14.0,<2.0.0)",
    "langchain (>=0.1.17,<0.2.0)",
    "transformers (>=4.39.3,<5.0.0)",
    "sentence-transformers (>=2.5.1,<3.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
